icon native adaptions and consistent dwd_ prefix
