# static/docs/openapi/ensemble.yml
@@ -386,10 +386,13 @@ paths:
             items:
               type: string
               enum:
-                - icon_seamless_eps
-                - icon_global_eps
-                - icon_eu_eps
-                - icon_d2_eps
+                - dwd_icon_seamless_eps
+                - dwd_icon_global_eps
+                - dwd_icon_global_native_eps
+                - dwd_icon_eu_eps
+                - dwd_icon_eu_native_eps
+                - dwd_icon_d2_eps
+                - dwd_icon_d2_native_eps
                 - ncep_gefs_seamless
                 - ncep_gefs025
                 - ncep_gefs05
